[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interview-tracker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.21",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "alembic>=1.13",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "pyright>=1.1",
    "ruff>=0.4",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[tool.hatch.build.targets.wheel]
packages = ["src/interview_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
